Fix contributor image size
I have no clue why it messed up like that. I might honestly just remove all images in the blog since it doesn't seem to work properly.

--- a/docs/.vitepress/theme/styles.css
+++ b/docs/.vitepress/theme/styles.css
@@ -15,6 +15,7 @@ p {
 .contrib {
     border-radius: 1rem;
     margin-bottom: 0.5rem;
+    width: 2rem;
 }
 
 .contributors {
